Viewport Fixes (#120)
* Initializing Viewport_Fixes for empty Pull Request

* fix horizontal scrolling on mobile

* mobile adjustments for loading screen

* fix view links

--- a/resources/sass/calendar/inputs.scss
+++ b/resources/sass/calendar/inputs.scss
@@ -1281,7 +1281,7 @@ ol.example li.placeholder:before {
     border-radius: 5px;
     padding: 20px;
     width:700px;
-    max-width: 90%;
+    max-width: 90vw;
     position:relative;
     margin:auto;
     color: white;
