--- a/resources/sass/calendar/viewport.scss
+++ b/resources/sass/calendar/viewport.scss
@@ -9,6 +9,7 @@
     width: 100%;
     color: $main-text-color;
     min-height: 85%;
+    justify-content: center;
 }
 
 .timespan {
@@ -27,10 +28,6 @@
         overflow: hidden;
         box-shadow: 0 10px 15px -3px rgba(0,0,0,.1), 0 4px 6px -2px rgba(0,0,0,.05);
         transition: all 0.3s cubic-bezier(.25,.8,.25,1);
-
-        & > div:not(:first-child) {
-            border-top:1px solid $calendar-border-color;
-        }
 
         .week_day_name{
             flex: 1 0;
@@ -75,7 +72,7 @@
             display: flex;
             flex-direction: column;
             overflow-x: auto;
-            
+
             &:not(.intercalary){
                 border-top: 1px solid $calendar-border-color;
             }
@@ -90,6 +87,7 @@
         background-color: $card-bg-color;
         min-width: 5rem;
         position: relative;
+        border-top:1px solid $calendar-border-color;
 
         &.empty_timespan_day{
             background-color:$gray-secondary;
@@ -133,6 +131,7 @@
         background-image: $disabled-crosshatch;
         cursor: not-allowed;
         min-width: 5rem;
+        border-top:1px solid $calendar-border-color;
 
         &.intercalary{
             min-width: initial;
